[package]
name = "rs-zip2asn2jsonl2concat"
version = "0.1.0"
edition = "2024"

description = "Get jsonl lines from der bytes in a zip"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-zip2asn2jsonl2concat/latest"
repository = "https://github.com/takanoriyanagitani/rs-zip2asn2jsonl2concat"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.der]
version = "0.7.10"
default-features = false
features = [
	"derive",
	"std",
]

[dependencies.zip]
version = "4.0.0"
default-features = false
features = [
	"deflate",
]

[dependencies.flate2]
version = "1.1.1"
default-features = false
features = [
	"rust_backend",
]
